--- a/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
@@ -2,14 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SjC-jd-HjE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Home Time Line View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="HomeTimeLineViewController" customModule="TwitterClone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeTimeLine" id="BYZ-38-t0r" customClass="HomeTimeLineViewController" customModule="TwitterClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -60,77 +59,64 @@
                                 <rect key="frame" x="36" y="200" width="528" height="200"/>
                                 <color key="backgroundColor" red="0.63098153589999995" green="0.86670137049999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="JSS-WT-gnk"/>
+                                    <constraint firstAttribute="height" constant="200" id="zd7-Rx-iMW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w4T-am-ssY">
-                                <rect key="frame" x="36" y="40" width="140" height="140"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="w4T-am-ssY" secondAttribute="height" multiplier="1:1" id="0Zz-Lx-7Ts"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5F-f2-atw">
-                                <rect key="frame" x="196" y="99" width="368" height="21"/>
+                                <rect key="frame" x="166" y="100" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorited" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c1a-T5-Jgl">
-                                <rect key="frame" x="338" y="430" width="125" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="aQR-n5-FT4"/>
-                                    <constraint firstAttribute="height" constant="50" id="f7g-58-E3J"/>
-                                </constraints>
+                                <rect key="frame" x="492" y="430" width="72" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Retweets" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E70-GV-CRl">
-                                <rect key="frame" x="138" y="430" width="125" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="C2a-HR-VLh"/>
-                                    <constraint firstAttribute="width" constant="125" id="HHM-tq-PjZ"/>
-                                </constraints>
+                                <rect key="frame" x="36" y="430" width="72" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xyC-yR-pqp">
+                                <rect key="frame" x="36" y="60" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="PeX-gq-w3E"/>
+                                    <constraint firstAttribute="height" constant="100" id="yRZ-az-cGG"/>
+                                </constraints>
+                                <state key="normal">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="imageButtonPressed:" destination="zlt-az-0J8" eventType="touchUpInside" id="sp0-m9-kuZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.63098153589999995" green="0.86670137049999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="qPW-Oz-Z9q" firstAttribute="top" secondItem="c1a-T5-Jgl" secondAttribute="bottom" constant="40" id="8vK-Dm-hAI"/>
-                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="leading" secondItem="E70-GV-CRl" secondAttribute="trailing" constant="40" id="Fu3-EM-YFC"/>
-                            <constraint firstItem="QS8-8e-wsF" firstAttribute="leading" secondItem="NxO-wc-E3a" secondAttribute="leadingMargin" constant="20" id="IHI-ef-hb0"/>
-                            <constraint firstItem="QS8-8e-wsF" firstAttribute="top" secondItem="w4T-am-ssY" secondAttribute="bottom" constant="20" id="ITD-tb-h9j"/>
-                            <constraint firstItem="E70-GV-CRl" firstAttribute="top" secondItem="c1a-T5-Jgl" secondAttribute="top" id="J5W-5f-zaV"/>
-                            <constraint firstAttribute="centerX" secondItem="c1a-T5-Jgl" secondAttribute="centerX" constant="-100" id="UER-Er-cuY"/>
-                            <constraint firstItem="w4T-am-ssY" firstAttribute="centerY" secondItem="t5F-f2-atw" secondAttribute="centerY" constant="0.5" id="YD5-Yx-jgh"/>
-                            <constraint firstItem="t5F-f2-atw" firstAttribute="leading" secondItem="w4T-am-ssY" secondAttribute="trailing" constant="20" id="Z6w-AN-JbT"/>
-                            <constraint firstAttribute="centerY" secondItem="QS8-8e-wsF" secondAttribute="centerY" id="aVB-V6-M69"/>
-                            <constraint firstItem="w4T-am-ssY" firstAttribute="leading" secondItem="QS8-8e-wsF" secondAttribute="leading" id="cdo-bS-tKj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="QS8-8e-wsF" secondAttribute="trailing" constant="20" id="cic-iq-cNs"/>
-                            <constraint firstItem="w4T-am-ssY" firstAttribute="top" secondItem="XFg-2a-SPg" secondAttribute="bottom" constant="20" id="fyC-0f-1Hx"/>
-                            <constraint firstItem="qPW-Oz-Z9q" firstAttribute="top" secondItem="E70-GV-CRl" secondAttribute="bottom" constant="40" id="kzM-dt-f1B"/>
-                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="top" secondItem="QS8-8e-wsF" secondAttribute="bottom" constant="30" id="msb-FQ-ddS"/>
-                            <constraint firstItem="E70-GV-CRl" firstAttribute="top" secondItem="QS8-8e-wsF" secondAttribute="bottom" constant="30" id="pme-px-uxf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="t5F-f2-atw" secondAttribute="trailing" constant="20" id="rrV-hb-CCc"/>
-                            <constraint firstAttribute="centerX" secondItem="E70-GV-CRl" secondAttribute="centerX" constant="100" id="zPj-1l-VDi"/>
+                            <constraint firstItem="E70-GV-CRl" firstAttribute="top" secondItem="QS8-8e-wsF" secondAttribute="bottom" constant="30" id="3X7-Vb-hEx"/>
+                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="top" secondItem="E70-GV-CRl" secondAttribute="top" id="IpC-O9-FoL"/>
+                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="trailing" secondItem="QS8-8e-wsF" secondAttribute="trailing" id="Kfn-B9-Wc7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QS8-8e-wsF" secondAttribute="trailing" constant="20" id="dXT-AA-6XU"/>
+                            <constraint firstItem="QS8-8e-wsF" firstAttribute="leading" secondItem="E70-GV-CRl" secondAttribute="leading" id="fxy-TZ-1J0"/>
+                            <constraint firstItem="QS8-8e-wsF" firstAttribute="leading" secondItem="NxO-wc-E3a" secondAttribute="leadingMargin" constant="20" id="gpy-hw-vV5"/>
+                            <constraint firstItem="QS8-8e-wsF" firstAttribute="top" secondItem="xyC-yR-pqp" secondAttribute="bottom" constant="40" id="pbu-Ag-7kV"/>
+                            <constraint firstItem="t5F-f2-atw" firstAttribute="leading" secondItem="xyC-yR-pqp" secondAttribute="trailing" constant="30" id="qyW-g8-IvB"/>
+                            <constraint firstItem="xyC-yR-pqp" firstAttribute="leading" secondItem="QS8-8e-wsF" secondAttribute="leading" id="u4Y-Cu-Nba"/>
+                            <constraint firstItem="t5F-f2-atw" firstAttribute="centerY" secondItem="xyC-yR-pqp" secondAttribute="centerY" id="zek-Ji-Hep"/>
+                            <constraint firstAttribute="centerY" secondItem="QS8-8e-wsF" secondAttribute="centerY" id="zyt-74-Qwg"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Fu3-EM-YFC"/>
-                                <exclude reference="8vK-Dm-hAI"/>
-                                <exclude reference="kzM-dt-f1B"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="favorited" destination="c1a-T5-Jgl" id="DMC-iM-oFt"/>
+                        <outlet property="imageButton" destination="xyC-yR-pqp" id="Mgd-TS-HrM"/>
                         <outlet property="retweets" destination="E70-GV-CRl" id="fwK-Yr-wel"/>
-                        <outlet property="tweetImage" destination="w4T-am-ssY" id="btu-r6-kq4"/>
                         <outlet property="tweetText" destination="QS8-8e-wsF" id="Der-3u-pHW"/>
                         <outlet property="username" destination="t5F-f2-atw" id="jlO-l5-CXt"/>
                     </connections>
@@ -138,6 +124,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KZ9-KM-G3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1692" y="131"/>
+        </scene>
+        <!--User Tweets-->
+        <scene sceneID="rgU-PU-glc">
+            <objects>
+                <viewController storyboardIdentifier="UserTweets" id="Pzy-RR-FmD" customClass="UserTweets" customModule="TwitterClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qyL-xX-nJc"/>
+                        <viewControllerLayoutGuide type="bottom" id="cBz-fP-mwF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eYw-eL-FwZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ypJ-oe-xsH">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ypJ-oe-xsH" secondAttribute="trailing" id="1qQ-Oo-0ia"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ypJ-oe-xsH" secondAttribute="trailing" id="5ib-b2-rxT"/>
+                            <constraint firstAttribute="trailing" secondItem="ypJ-oe-xsH" secondAttribute="trailing" id="7Tz-YL-S8Q"/>
+                            <constraint firstItem="ypJ-oe-xsH" firstAttribute="leading" secondItem="eYw-eL-FwZ" secondAttribute="leading" id="FI0-EH-f80"/>
+                            <constraint firstItem="cBz-fP-mwF" firstAttribute="top" secondItem="ypJ-oe-xsH" secondAttribute="bottom" id="SqI-Ho-lww"/>
+                            <constraint firstItem="ypJ-oe-xsH" firstAttribute="top" secondItem="qyL-xX-nJc" secondAttribute="bottom" id="uFW-TS-UCf"/>
+                            <constraint firstItem="ypJ-oe-xsH" firstAttribute="leading" secondItem="eYw-eL-FwZ" secondAttribute="leading" id="yFo-cA-Bkx"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="1qQ-Oo-0ia"/>
+                                <exclude reference="5ib-b2-rxT"/>
+                                <exclude reference="yFo-cA-Bkx"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="tableview" destination="ypJ-oe-xsH" id="VAN-Vs-Ghe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xTE-xy-wYb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2319" y="131"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wzs-1V-aAr">
